--- a/index.html
+++ b/index.html
@@ -1,14 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
+    <script
+      src="https://kit.fontawesome.com/e15e59d426.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WeatherApp</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello Git</h1>
-    <script src="index.js"></script>
+    <div class="container">
+      <div class="weather-app">
+        <form id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            class="form-control"
+            id="city-input"
+          />
+
+          <input
+            type="submit"
+            value="Search"
+            class="form-control btn btn-primary shadow-sm w-100"
+            id="submit-form"
+          />
+          <input
+            type="submit"
+            value="Current"
+            class="btn btn-success w-100"
+            id="current-location-button"
+          />
+        </form>
+        <h1 id="city">Lagos, Nigeria</h1>
+        <ul class="weather-today">
+          <li id="date">Thursday 17:20</li>
+          <li id="description">Mostly Sunny</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <div class="clearfix">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                class="weather-icon float-left"
+              />
+              <div class="float-left">
+                <span class="temperature" id="temp">36</span
+                ><span class="unit">
+                  <a href="#" id="celsius-link"> °C</a> |
+                  <a href="#" id="fahrenheit-link"> °F</a></span
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <ul class="parameters">
+              <li>Precipitation: 1 %</li>
+              <li>Humidity:<span id="humidity"> 63 </span> %</li>
+              <li>Wind:<span id="wind"> 10 </span> km/hr</li>
+            </ul>
+
+            <ul class="weather-days">
+              <li>
+                <div class="day">Friday</div>
+                <div class="temps">
+                  <i class="fa-solid fa-cloud-sun"></i> 36/23
+                </div>
+              </li>
+              <li>
+                <div class="day">Saturday</div>
+                <div class="temps"><i class="fa-solid fa-sun"></i> 32/24</div>
+              </li>
+              <li>
+                <div class="day">Sunday</div>
+                <div class="temps">
+                  <i class="fa-solid fa-cloud-sun"></i> 34/21
+                </div>
+              </li>
+              <li>
+                <div class="day">Monday</div>
+                <div class="temps">
+                  <i class="fa-solid fa-cloud-sun"></i> 36/22
+                </div>
+              </li>
+              <li>
+                <div class="day">Tuesday</div>
+                <div class="temps"><i class="fa-solid fa-sun"></i> 30/21</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2>This page was built by <strong>Lateefat Jimoh</strong></h2>
+    <script src="weather.js"></script>
   </body>
 </html>
