I added my Git repository link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
         </div>
       </div>
     </div>
-    <h2>This page was built by <strong>Lateefat Jimoh</strong></h2>
+    <h2>
+      This page was built by
+      <strong
+        ><a href="https://github.com/QueenLateefah/basics"
+          >Lateefat Jimoh</a
+        ></strong
+      >
+    </h2>
     <script src="weather.js"></script>
   </body>
 </html>
