--- a/index.html
+++ b/index.html
@@ -1,109 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-
-    <script
-      src="https://kit.fontawesome.com/e15e59d426.js"
-      crossorigin="anonymous"
-    ></script>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeatherApp</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="style.css" />
+    <!-- axios cdn -->
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- icon file -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <title>Weather App</title>
   </head>
   <body>
-    <div class="container">
-      <div class="weather-app">
-        <form id="search-form">
-          <input
-            type="search"
-            placeholder="Enter a city"
-            class="form-control"
-            id="city-input"
-          />
-
-          <input
-            type="submit"
-            value="Search"
-            class="form-control btn btn-primary shadow-sm w-100"
-            id="submit-form"
-          />
-          <input
-            type="submit"
-            value="Current"
-            class="btn btn-success w-100"
-            id="current-location-button"
-          />
-        </form>
-        <h1 id="city">Lagos, Nigeria</h1>
-        <ul class="weather-today">
-          <li id="date">Thursday 17:20</li>
-          <li id="description">Mostly Sunny</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                class="weather-icon float-left"
+    <div class="app mt-5">
+      <div class="container p-4 mb-0">
+        <div class="row pb-3">
+          <div class="mb-1 col-6">
+            <form action="">
+              <input
+                type="text"
+                class="form-control"
+                id="search-city"
+                aria-describedby="search city"
+                placeholder="Enter a city.."
               />
-              <div class="float-left">
-                <span class="temperature" id="temp">36</span
-                ><span class="unit">
-                  <a href="#" id="celsius-link"> °C</a> |
-                  <a href="#" id="fahrenheit-link"> °F</a></span
+            </form>
+          </div>
+          <div class="mb-1 col-3">
+            <button id="searchBtn" type="submit" class="btn btn-primary px-4">
+              Search
+            </button>
+          </div>
+          <div class="mb-1 col-3">
+            <button id="currentBtn" type="submit" class="btn btn-primary px-4">
+              Current
+            </button>
+          </div>
+        </div>
+        <hr />
+        <div class="row pb-4">
+          <div class="col-6">
+            <div class="row"><h1 id="city"></h1></div>
+            <div class="row">
+              <p class="mb-0" id="description"></p>
+            </div>
+            <div class="row">
+              <p class="mb-0" id="date"></p>
+            </div>
+            <div class="row">
+              <p class="mb-0">
+                Humidity:
+                <span class="weather-param"><span id="humidity"></span>%</span>,
+                Wind:<span class="weather-param"
+                  ><span id="wind"></span>km/hr</span
                 >
-              </div>
+              </p>
             </div>
           </div>
-          <div class="col-6">
-            <ul class="parameters">
-              <li>Precipitation: 1 %</li>
-              <li>Humidity:<span id="humidity"> 63 </span> %</li>
-              <li>Wind:<span id="wind"> 10 </span> km/hr</li>
-            </ul>
-
-            <ul class="weather-days">
-              <li>
-                <div class="day">Friday</div>
-                <div class="temps">
-                  <i class="fa-solid fa-cloud-sun"></i> 36/23
-                </div>
-              </li>
-              <li>
-                <div class="day">Saturday</div>
-                <div class="temps"><i class="fa-solid fa-sun"></i> 32/24</div>
-              </li>
-              <li>
-                <div class="day">Sunday</div>
-                <div class="temps">
-                  <i class="fa-solid fa-cloud-sun"></i> 34/21
-                </div>
-              </li>
-              <li>
-                <div class="day">Monday</div>
-                <div class="temps">
-                  <i class="fa-solid fa-cloud-sun"></i> 36/22
-                </div>
-              </li>
-              <li>
-                <div class="day">Tuesday</div>
-                <div class="temps"><i class="fa-solid fa-sun"></i> 30/21</div>
-              </li>
-            </ul>
+          <div class="offset-2 col-4 align-self-center pt-2">
+            <img
+              id="temp-icon"
+              class="main-temp-icon"
+              src=""
+              alt="weather-icon"
+            />
+            <h1 class="main-temp-text">
+              <span id="temp"></span><sup class="temp-unit">°C</sup>
+            </h1>
           </div>
+        </div>
+        <div class="row pt-4 pb-2 text-center" id="forecast-row"></div>
+        <div class="row pt-3">
+          <p class="text-center mb-0 github-link">
+            <a
+              class="github"
+              href="https://github.com/QueenLateefah/basics"
+              target="_blank"
+              rel="noreferrer"
+              >Open-source code</a
+            >
+            by Lateefat Jimoh
+          </p>
         </div>
       </div>
     </div>
-    <h2>
-      This page was built by
-      <strong
-        ><a href="https://github.com/QueenLateefah/basics"
-          >Lateefat Jimoh</a
-        ></strong
-      >
-    </h2>
+
     <script src="weather.js"></script>
   </body>
 </html>
